# SpicetifyInstaller

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: Sign.yml  build.yml
src/: app.ts  build.js  dropdown-handler.ts  main.ts  styles.css  update-manager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  update_manager.rs
