[package]
name = "spicetify-installer"
version = "1.0.0"
description = "An unofficial Spicetify installer built with Tauri for a seamless setup experience. This lightweight app automates the installation and configuration of Spicetify, allowing you to customize your Spotify client with ease."
authors = ["FIREPAWER07"]
license = "GNU GPLv3 (GNU General Public License v3.0)"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spicetify_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-core = "2.0.0-beta.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

