[package]
name = "spicetify-installer"
version = "1.0.7-alpha"
description = "An unofficial Spicetify installer built with Tauri for a seamless setup experience. This lightweight app automates the installation and configuration of Spicetify, allowing you to customize your Spotify client with ease."
authors = ["FIREPAWER07"]
license = "GNU GPLv3 (GNU General Public License v3.0)"
edition = "2021"

[[bin]]
name = "spicetify-installer"
path = "src/main.rs"

[lib]
name = "spicetify_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-core = "2.0.0-beta.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
